# mcp-chrome-server

./: Dockerfile  README.md  main.py  pyproject.toml  smithery.yaml
.github/workflows/: docker-publish.yml
src/mcp_chrome_server/: __init__.py  server.py  service.py
